syntax = "proto3";
package modules;

import "proto/common.proto";

option go_package = "./proto";

message BigButtonInput {
  common.PressType press_type = 1;
}