syntax = "proto3";
package modules;

option go_package = "./proto";

import "proto/common.proto";

// Doesn't need any fields. If input is received, rotate clockwise.
message NeedyKnobInput {}

message NeedyKnobInputResult { NeedyKnobState needy_knob_state = 1; }

message NeedyKnobState {
    repeated bool displayed_pattern_first_row = 1;
    repeated bool displayed_pattern_second_row = 2;
    common.CardinalDirection dial_direction = 3;
    int64 countdown_started_at = 4;
    int32 countdown_duration = 5;
}
