syntax = "proto3";
package modules;

option go_package = "./proto";

import "proto/common.proto";

message NeedyVentGasInput { bool input = 1; }

message NeedyVentGasInputResult { NeedyVentGasState needy_vent_gas_state = 1; }

message NeedyVentGasState {
  string displayed_question = 1;
  int64 countdown_started_at = 2;
  int32 countdown_duration = 3;
}
